organised photos and made relevant directory edits

--- a/experience.html
+++ b/experience.html
@@ -39,11 +39,11 @@ body, html {
 </div>
 <div class="social-bar">
     <a href="https://au.linkedin.com/in/bryan-w-b6819537b">
-    <img src="linked_in.jpg" class= "rounded_edge" alt="Linkedin" width="100">
+    <img src="photography_covers/linked_in.jpg" class= "rounded_edge" alt="Linkedin" width="100">
     </a>
-    
+
     <a href="https://github.com/Y3N-Y3N">
-    <img src="github_icon.png" class= "rounded_edge" alt="Linkedin" width="100">
+    <img src="photography_covers/github_icon.png" class= "rounded_edge" alt="Linkedin" width="100">
     </a>
 </div>
 
